Reduce width of top most view in a notification not to be covered by the control buttons.

Bug: 735889
Test: Manual. Show a notification with log title and check that the
Change-Id: Ic9598e1b4873d1f130eda0eb993bfe2eed1a82d4
      title text is not covered by the control buttons.